--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %} Home {% endblock %}
+{% block header %} WG website {% endblock %}
+{% block content %}
+Hello
 
-</body>
-</html>
+{% endblock %}
