--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -4,56 +4,55 @@
 {% block content %}
  <form action="" method="post" novalidate>
     {{ form.hidden_tag() }}
-    <p>
+    <p  class="form-group">
         {{ form.name.label }}<br>
-        {{ form.name(size=32) }}
+        {{ form.name(size=32, class_="form-control") }}
         {% for error in form.name.errors %}
             <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
     </p>
-    <p>
+    <p  class="form-group">
         {{ form.desc.label }}<br>
-        {{ form.desc(size=140) }}
+        {{ form.desc(size=140, class_="form-control") }}
         {% for error in form.desc.errors %}
             <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
     </p>
-     <p>
+     <p  class="form-group">
         {{ form.ing_name_1.label }}<br>
-        {{ form.ing_name_1(size=32) }}
+        {{ form.ing_name_1(size=32, class_="form-control") }}
          {% for error in form.ing_name_1.errors %}
             <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
     </p>
-     <p>
+     <p class="form-group">
         {{ form.quantity_1.label }}<br>
-        {{ form.quantity_1(size=32) }}
+        {{ form.quantity_1(size=32, class_="form-control") }}
          {% for error in form.quantity_1.errors %}
             <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
     </p>
-    <p>
+    <p class="form-group">
         {{ form.ing_name_2.label }}<br>
-        {{ form.ing_name_2(size=32) }}
+        {{ form.ing_name_2(size=32, class_="form-control") }}
          {% for error in form.ing_name_2.errors %}
             <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
     </p>
-     <p>
+     <p class="form-group">
         {{ form.quantity_2.label }}<br>
-        {{ form.quantity_2(size=32) }}
+        {{ form.quantity_2(size=32, class_="form-control") }}
          {% for error in form.quantity_2.errors %}
             <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
      </p>
-
      {% for field in form.ingredients %}
          <div class="ing_wrapper">
-         <p>
+         <p class="form-group">
          {% if field.name == "CSRF-TOKEN" %}
          {% else %}
-        {{ field.label }}<br>
-        {{ field(size=32) }}
+            {{ field.label }}<br>
+            {{ field(size=32) }}
          {% for error in field.errors %}
             <span style="color: red;">[{{ error }}]</span>
              {% endfor %}
@@ -63,10 +62,13 @@
          </div>
 
     {% endfor %}
+    <div id="plus_sign">
+        <img src="../static/img/plus_sign.PNG">
+    </div>
 
 
 
-    <p>{{ form.submit() }}</p>
+    <p>{{ form.submit(class_="btn btn-primary") }}</p>
  </form>
 
 {% endblock %}
