--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Home {% endblock %}
+{% block title %} Create {% endblock %}
 {% block header %} Create Cocktails{% endblock %}
 {% block content %}
  <form action="" method="post" novalidate>
@@ -18,46 +18,19 @@
             <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
     </p>
-     <p  class="form-group">
-        {{ form.ing_name_1.label }}<br>
-        {{ form.ing_name_1(size=32, class_="form-control") }}
-         {% for error in form.ing_name_1.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-     <p class="form-group">
-        {{ form.quantity_1.label }}<br>
-        {{ form.quantity_1(size=32, class_="form-control") }}
-         {% for error in form.quantity_1.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-    <p class="form-group">
-        {{ form.ing_name_2.label }}<br>
-        {{ form.ing_name_2(size=32, class_="form-control") }}
-         {% for error in form.ing_name_2.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-     <p class="form-group">
-        {{ form.quantity_2.label }}<br>
-        {{ form.quantity_2(size=32, class_="form-control") }}
-         {% for error in form.quantity_2.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-     </p>
+
      {% for field in form.ingredients %}
-         <div class="ing_wrapper">
-         <p class="form-group">
+         <div class="ing_wrapper form-group">
+
          {% if field.name == "CSRF-TOKEN" %}
          {% else %}
-            {{ field.label }}<br>
+            {{ field.label }}
             {{ field(size=32) }}
          {% for error in field.errors %}
             <span style="color: red;">[{{ error }}]</span>
              {% endfor %}
          {% endif %}
-         </p>
+
 
          </div>
 
