--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,18 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <title>{%- block title %}{%- endblock title %}</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css">
+{#    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css">#}
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark  sticky-top justify-content-center">
+    <a class="navbar-brand" href="#">Profile</a>
+
+     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_toggle"
+    aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbar_toggle" >
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item {% if url_for(request.endpoint) == "/index" %} active {% endif %}">
+                <a class="nav-link" href="{{ url_for('index') }}">Home
+                <span class="sr-only">(current)</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link {% if url_for(request.endpoint) == "/create" %} active {% endif %}" href="{{ url_for('create') }}">Create
+                <span class="sr-only">(current)</span>
+                </a>
+            </li>
+        </ul>
+
+        <form class="form-inline">
+            <div class="md-form my-0">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+            </div>
+        </form>
+    </div>
+</nav>
+
 <div id="wrap_whole"  class="">
 
-
-<div class="sticky-top nav_buttons">
-    <div class="right nav_btn"><a  href="{{ url_for('index') }}">Home</a></div>
-    <div class="left nav_btn"><a href="{{ url_for('create') }}">Create</a></div>
-</div>
-
+{##}
+{#<div class="sticky-top nav_buttons">#}
+{#    <div class="right nav_btn"><a  href="{{ url_for('index') }}">Home</a></div>#}
+{#    <div class="left nav_btn"><a href="{{ url_for('create') }}">Create</a></div>#}
+{#</div>#}
+{##}
 
 {% with messages = get_flashed_messages() %}
 {% if messages %}
@@ -32,8 +63,12 @@
 <footer>
     <script src='../static/js/jQuery.js'></script>
     <script src='../static/js/app.js'></script>
-    <script src='../static/js/bootstrap.js'></script>
-    <script src='../static/js/bootstrap.bundle.js'></script>
+{#    <script src='../static/js/bootstrap.js'></script>#}
+{#    <script src='../static/js/bootstrap.bundle.js'></script>#}
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     {% block javascript %}{% endblock %}
 </footer>
 </div>
