--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,8 +1,9 @@
-% extends "base.html" %}
+{% extends "base.html" %}
 
-{% block content %}
 {% block title %} Login {% endblock %}
-{% block header %} Login {% endblock %}<p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+{% block header %} Login {% endblock %}
+{% block content %}
+<p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
 <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
