--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,38 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <title>{%- block title %}{%- endblock title %}</title>
-{#    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css">#}
+    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark  sticky-top justify-content-center">
-    <a class="navbar-brand" href="#">Profile</a>
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark justify-content-center sticky-top">
 
-     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_toggle"
+    <div class="text-center">
+     <button class="navbar-toggler justify-content-center" type="button" data-toggle="collapse" data-target="#navbar_toggle"
     aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
-
-    <div class="collapse navbar-collapse" id="navbar_toggle" >
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item {% if url_for(request.endpoint) == "/index" %} active {% endif %}">
+    </div>
+    <div class="collapse navbar-collapse justify-content-center ul_div" id="navbar_toggle" >
+        <a class="navbar-brand" {% if current_user.is_authenticated %}
+           href="{{ url_for('user', username=current_user.username )  }}"
+        {% else %}
+                   href="{{ url_for('login') }}"
+        {% endif %}>
+            <img src="../static/img/user_icon_grey.PNG" width="30" height="30" alt="">
+        </a>
+        <ul class="navbar-nav">
+            <li class="nav-item align-content-center {% if active_page == "index" %} active {% endif %}">
                 <a class="nav-link" href="{{ url_for('index') }}">Home
                 <span class="sr-only">(current)</span>
                 </a>
             </li>
+        {% if current_user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link {% if url_for(request.endpoint) == "/create" %} active {% endif %}" href="{{ url_for('create') }}">Create
+                <a class="nav-link {% if active_page == "create" %} active {% endif %}" href="{{ url_for('create') }}">Create
                 <span class="sr-only">(current)</span>
                 </a>
             </li>
-        </ul>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('logout') }}">Logout
+                <span class="sr-only">(current)</span>
+                </a>
+            </li>
+        {% endif %}
 
-        <form class="form-inline">
-            <div class="md-form my-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            </div>
-        </form>
+        </ul>
     </div>
 </nav>
 
@@ -63,12 +72,9 @@
 <footer>
     <script src='../static/js/jQuery.js'></script>
     <script src='../static/js/app.js'></script>
-{#    <script src='../static/js/bootstrap.js'></script>#}
-{#    <script src='../static/js/bootstrap.bundle.js'></script>#}
+    <script src='../static/js/bootstrap.js'></script>
+    <script src='../static/js/bootstrap.bundle.js'></script>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     {% block javascript %}{% endblock %}
 </footer>
 </div>
