--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -3,7 +3,7 @@
 {% block title %} Login {% endblock %}
 {% block header %} Login {% endblock %}
 {% block content %}
-<p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+<p>New User? <a href="{{ url_for('auth.register') }}">Click to Register!</a></p>
 <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
@@ -23,4 +23,8 @@
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
     </form>
+    <p>
+        Forgot Your Password?
+        <a href="{{ url_for('auth.reset_password_request') }}">Click to Reset It</a>
+    </p>
 {% endblock %}
