--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>{%- block title %}{%- endblock title %}</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{ url_for( 'static', filename='css/bootstrap.css') }}" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark justify-content-center sticky-top">
@@ -18,26 +19,26 @@
     </div>
     <div class="collapse navbar-collapse justify-content-center ul_div" id="navbar_toggle" >
         <a class="navbar-brand" {% if current_user.is_authenticated %}
-           href="{{ url_for('user', username=current_user.username )  }}"
+           href="{{ url_for('main.user', username=current_user.username )  }}"
         {% else %}
-                   href="{{ url_for('login') }}"
+                   href="{{ url_for('auth.login') }}"
         {% endif %}>
-            <img src="../static/img/user_icon_grey.PNG" width="30" height="30" alt="">
+            <img src="{{ url_for('static', filename='img/user_icon_grey.PNG') }}" width="30" height="30" alt="">
         </a>
         <ul class="navbar-nav">
-            <li class="nav-item align-content-center {% if active_page == "index" %} active {% endif %}">
-                <a class="nav-link" href="{{ url_for('index') }}">Home
+            <li class="nav-item align-content-center {% if active_page == "main/index" %} active {% endif %}">
+                <a class="nav-link" href="{{ url_for('main.index') }}">Home
                 <span class="sr-only">(current)</span>
                 </a>
             </li>
         {% if current_user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link {% if active_page == "create" %} active {% endif %}" href="{{ url_for('create') }}">Create
+                <a class="nav-link {% if active_page == "main/create" %} active {% endif %}" href="{{ url_for('main.create') }}">Create
                 <span class="sr-only">(current)</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('logout') }}">Logout
+                <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout
                 <span class="sr-only">(current)</span>
                 </a>
             </li>
@@ -70,11 +71,9 @@
 
 {%- endblock content %}
 <footer>
-    <script src='../static/js/jQuery.js'></script>
-    <script src='../static/js/app.js'></script>
-    <script src='../static/js/bootstrap.js'></script>
-    <script src='../static/js/bootstrap.bundle.js'></script>
-
+    <script src='{{ url_for('static', filename='js/jQuery.js') }}'></script>
+    <script src='{{ url_for('static', filename='js/app.js') }}'></script>
+    <script src='{{ url_for('static', filename='js/bootstrap.js') }}'></script>
     {% block javascript %}{% endblock %}
 </footer>
 </div>
