--- a/app/templates/main/home.html
+++ b/app/templates/main/home.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div id="cocktailList" class="">
     {% for cocktail in cocktails %}
-        {% include '__cocktail_card.html' %}
+        {% include 'main/__cocktail_card.html' %}
     {% endfor %}
     </div>
 
