--- a/app/templates/main/profile.html
+++ b/app/templates/main/profile.html
@@ -2,9 +2,10 @@
 {% block title %} {{ title }} {% endblock %}
 {% block header %} {{ user.username }}'s Cocktails {% endblock %}
 {% block content %}
+    <p><a href="{{ url_for('main.edit_profile') }}">Edit your profile</a></p>
     <div id="cocktailList" class="">
     {% for cocktail in cocktails %}
-        {% include '__cocktail_card.html' %}
+        {% include 'main/__cocktail_card.html' %}
     {% endfor %}
     </div>
 
