--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,14 +26,14 @@
             <img src="{{ url_for('static', filename='img/user_icon_grey.PNG') }}" width="30" height="30" alt="">
         </a>
         <ul class="navbar-nav">
-            <li class="nav-item align-content-center {% if active_page == "main/index" %} active {% endif %}">
+            <li class="nav-item  {% if active_page == "index" %} active {% endif %}">
                 <a class="nav-link" href="{{ url_for('main.index') }}">Home
                 <span class="sr-only">(current)</span>
                 </a>
             </li>
         {% if current_user.is_authenticated %}
-            <li class="nav-item">
-                <a class="nav-link {% if active_page == "main/create" %} active {% endif %}" href="{{ url_for('main.create') }}">Create
+            <li class="nav-item  {% if active_page == "create" %} active {% endif %}">
+                <a class="nav-link" href="{{ url_for('main.create') }}">Create
                 <span class="sr-only">(current)</span>
                 </a>
             </li>
