--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -4,5 +4,5 @@
     {% block header %} File Not Found {% endblock %}
 {% block content %}
 
-    <p><a href="{{ url_for('index') }}">Back</a></p>
+    <p><a href="{{ url_for('main.index') }}">Back</a></p>
 {% endblock %}
