--- a/app/templates/main/edit_profile.html
+++ b/app/templates/main/edit_profile.html
@@ -5,16 +5,25 @@
 
 {% block content %}
 
-    <form action="" method="post">
+    <form action="" method="post" class="form-group">
         {{ form.hidden_tag() }}
         <p>
             {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
+            {{ form.username(size=32, class_="form-control") }}<br>
             {% for error in form.username.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
 
-        <p>{{ form.submit() }}</p>
+        <p>
+            {{ form.email.label }}<br>
+            {{ form.email(size=32, class_="form-control") }}<br>
+            {% for error in form.email.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+
+        <p>{{ form.delete(class_="btn btn-outline-danger delete_btn") }}</p>
+        <p>{{ form.submit(class_="btn btn-primary") }}</p>
     </form>
 {% endblock %}
