--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,11 +1,13 @@
-
-
-#wrap_whole {
+#wrap_whole{
+    align-content: center;
     max-width: 700px;
     margin: auto;
 }
+#margin_div{
+    margin: 2%
+}
 
-/* nav */
+/* old nav */
 
 .nav_buttons {
     height: auto;
@@ -15,47 +17,27 @@
 header {
     text-align: center;
 }
-.nav_btn {
-    text-align: center;
-    text-decoration: none;
-    opacity: 0.7;
-    background: red;
-}
-
-.nav_btn a {
-    color: white;
-}
-
-.nav_btn a:hover {
-    color:black;
-    text-decoration:none;
-    cursor:pointer;
-}
-
-.left {
-    width:50%;
-    height:auto;
-    overflow:hidden;
-}
-.right {
-    height:auto ;
-    width:50%;
-    float:left;
-
-}
 
 /* Cocktail Card*/
 
+#cocktailList{
+    align-content: center;
+    max-width: 1000px;
+    margin: auto;
+}
+
+
 .cocktail {
     margin: 2%;
-    margin-top: 5%;
+    margin-top: 3%;
     padding: 2%;
+    padding-top: 1%;
     border: gray;
     border-style: solid;
     border-width: medium;
     border-radius: 4px;
      /*background-color: rgba(255,0,0,0.2); */
-    background-color: rgba(44, 130, 201, 0.5);
+    background-color: rgba(255, 255, 255, 0.9);
 
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
     transition: 0.3s;
@@ -70,11 +52,11 @@ header {
 }
 
 .cocktail article {
-    text-align: left;
-    border: black;
-    border-style: solid;
-    border-width: thin;
-    border-radius: 4px;
+    /*text-align: left;*/
+    /*border: black;*/
+    /*border-style: solid;*/
+    /*border-width: thin;*/
+    /*border-radius: 4px;*/
     margin-left: 2%;
     padding: 2px;
     background-color: white ;
@@ -88,7 +70,7 @@ hr {
     margin: auto;
 }
 
-
+/* create form */
 #plus_sign {
     margin-top: 5%;
     width: 100%;
@@ -113,4 +95,10 @@ nav {
 
 .delete_btn {
     float: right;
+}
+
+/* Search*/
+#search_nav {
+    position: sticky;
+    top:55px;
 }
