--- a/app/templates/main/profile.html
+++ b/app/templates/main/profile.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 {% block title %} {{ title }} {% endblock %}
 {% block header %} {{ user.username }}'s Cocktails {% endblock %}
+
+{% block second_nav %}
+{% include 'main/__search_nav.html' %}
+{% endblock %}
+
 {% block content %}
     <p><a href="{{ url_for('main.edit_profile') }}">Edit your profile</a></p>
     <div id="cocktailList" class="">
