--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark   sticky-top">
-    <a class="navbar-brand" href="" style="display: none"></a>
+    <a class="navbar-brand" href="{{ url_for('main.index') }}" {# style="display: none"#}>Home</a>
     <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbar_toggle"
              aria-controls="navbar_toggle" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -26,11 +26,11 @@
             <img src="{{ url_for('static', filename='img/user_icon_grey.PNG') }}" width="30" height="30" alt="">
         </a>
         <ul class="navbar-nav">
-            <li class="nav-item  {% if active_page == "index" %} active {% endif %}">
-                <a class="nav-link" href="{{ url_for('main.index') }}">Home
-                <span class="sr-only">(current)</span>
-                </a>
-            </li>
+{#            <li class="nav-item  {% if active_page == "index" %} active {% endif %}">#}
+{#                <a class="nav-link" href="{{ url_for('main.index') }}">Home#}
+{#                <span class="sr-only">(current)</span>#}
+{#                </a>#}
+{#            </li>#}
         {% if current_user.is_authenticated %}
             <li class="nav-item  {% if active_page == "create" %} active {% endif %}">
                 <a class="nav-link" href="{{ url_for('main.create') }}">Create
@@ -70,8 +70,20 @@
 <header><h1>{%- block header %} {%-  endblock header %}</h1></header>
 {%- block content %}
 
+
+<br>
+    {% if prev_url %}
+        <ul>
+            <li class="page-item"><a class="page-link" href="{{ prev_url }}">Previous</a></li>
+            {% endif %}
+            {% if next_url %}
+            <li class="page-item"><a class="page-link" href="{{ next_url }}">Next</a></li>
+            {% endif %}
+        </ul>
+    <br>
 {%- endblock content %}
-<footer class="page-footer font-small blue fixed-bottom">
+{% block footer %}
+<footer class="page-footer font-small blue">
     <div class="footer-copyright text-center py-3">Cocktails:
         <a href="{{ url_for('main.about') }}"> About </a>
     </div>
@@ -81,6 +93,7 @@
     <script src='{{ url_for('static', filename='js/bootstrap.js') }}'></script>
     {% block javascript %}{% endblock %}
 </footer>
+{% endblock footer %}
 </div>
 </div>
 </body>
