--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -102,3 +102,15 @@ nav {
     position: sticky;
     top:55px;
 }
+
+/* Cocktail_pic */
+.cocktail_pic {
+    size: auto;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.portrait {
+    height: 80px;
+    width: 30px;
+}
