--- a/app/templates/main/create.html
+++ b/app/templates/main/create.html
@@ -3,7 +3,7 @@
 {% block title %} Create {% endblock %}
 {% block header %} Create Cocktails{% endblock %}
 {% block content %}
- <form action="" method="post" novalidate>
+ <form action="" method="post" enctype="multipart/form-data" novalidate>
     {{ form.hidden_tag() }}
     <p  class="form-group" data-ajax= "{{ url_for('main.validate_cocktail_name') }}">
         {{ form.name.label }}<br>
@@ -36,56 +36,25 @@
          </div>
     {% endfor %}
 
-
- <!-- Code if all ingredients are directly in the form -->
-{#    <div class="ing_wrapper form-group">#}
-{#        {{ form.ing_name_1.label }}<br>#}
-{#        {{ form.ing_name_1(size=140, class_="form-control") }}#}
-{#        {% for error in form.ing_name_1.errors %}#}
-{#            <span style="color: red;">[{{ error }}]</span>#}
-{#        {% endfor %}#}
-{#        {{ form.quantity_1.label }}<br>#}
-{#        {{ form.quantity_1(size=140, class_="form-control") }}#}
-{#        {% for error in form.quantity_1.errors %}#}
-{#            <span style="color: red;">[{{ error }}]</span>#}
-{#        {% endfor %}#}
-{#    </div>#}
-{##}
-{#    <div class="ing_wrapper form-group">#}
-{#        {{ form.ing_name_2.label }}<br>#}
-{#        {{ form.ing_name_2(size=140, class_="form-control") }}#}
-{#        {% for error in form.ing_name_2.errors %}#}
-{#            <span style="color: red;">[{{ error }}]</span>#}
-{#        {% endfor %}#}
-{#     {{ form.quantity_1.label }}<br>#}
-{#        {{ form.quantity_1(size=140, class_="form-control") }}#}
-{#        {% for error in form.quantity_1.errors %}#}
-{#            <span style="color: red;">[{{ error }}]</span>#}
-{#        {% endfor %}#}
-{#    </div>#}
-{##}
-{#    <div class="ing_wrapper form-group">#}
-{#        {{ form.ing_name_3.label }}<br>#}
-{#        {{ form.ing_name_3(size=140, class_="form-control") }}#}
-{#        {% for error in form.ing_name_3.errors %}#}
-{#            <span style="color: red;">[{{ error }}]</span>#}
-{#        {% endfor %}#}
-{#        {{ form.quantity_1.label }}<br>#}
-{#        {{ form.quantity_1(size=140, class_="form-control") }}#}
-{#        {% for error in form.quantity_1.errors %}#}
-{#            <span style="color: red;">[{{ error }}]</span>#}
-{#        {% endfor %}#}
-{#    </div>#}
-
     <div id="plus_sign">
         <img src=" {{ url_for( 'static', filename='img/plus_sign.PNG') }}">
     </div>
+
+     <p  class="form-group">
+         {{ form.picture.label }}
+         {{ form.picture() }}
+         {% for error in form.picture.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
+     </p>
+
   {% if request.endpoint != 'main.create' %}
          <script>
          document.querySelector('#plus_sign').style.display = 'none'
          </script>
         <p>{{ form.delete(class_="btn btn-outline-danger delete_btn") }}</p>
     {% endif %}
+
     <p>{{ form.submit(class_="btn btn-primary") }}</p>
 
 
