--- a/app/templates/main/create.html
+++ b/app/templates/main/create.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {#{% set active_page = "create" %}#}
 {% block title %} Create {% endblock %}
-{% block header %} Create Cocktails{% endblock %}
+{% block header %} Create your own Recipe{% endblock %}
 {% block content %}
  <form action="" method="post" enctype="multipart/form-data" novalidate>
     {{ form.hidden_tag() }}
