--- a/app/templates/main/create.html
+++ b/app/templates/main/create.html
@@ -5,7 +5,7 @@
 {% block content %}
  <form action="" method="post" enctype="multipart/form-data" novalidate>
     {{ form.hidden_tag() }}
-    <p  class="form-group" data-ajax= "{{ url_for('main.validate_cocktail_name') }}">
+    <p  class="form-group" data-ajax= "{{ url_for('main.validate_recipe_name') }}">
         {{ form.name.label }}<br>
         {{ form.name(size=32, class_="form-control") }}
         {% for error in form.name.errors %}
