--- a/app/templates/main/profile.html
+++ b/app/templates/main/profile.html
@@ -7,7 +7,8 @@
 {% endblock %}
 
 {% block content %}
-    <p><a href="{{ url_for('main.edit_profile') }}">Edit your profile</a></p>
+    <p><a href="{{ url_for('auth.edit_profile') }}">Edit your profile</a></p>
+    <p><a href="{{ url_for('main.upload_json') }}">Save all recipes as json</a></p>
     <div id="cocktailList" class="">
     {% for recipe in recipes %}
         {% include 'main/__recipe_card.html' %}
