Add newr older Recipes to profile

--- a/app/templates/main/profile.html
+++ b/app/templates/main/profile.html
@@ -14,5 +14,13 @@
         {% include 'main/__recipe_card.html' %}
     {% endfor %}
     </div>
+    <br>
+        {% if prev_url %}
+        <a href="{{ prev_url }}">Newer Recipes</a>
+        {% endif %}
+        {% if next_url %}
+        <a href="{{ next_url }}">Older Recipes</a>
+        {% endif %}
+        <br>
 
 {% endblock %}
