heroku deployment changes

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -84,7 +84,7 @@
 {%- endblock content %}
 {% block footer %}
 <footer class="page-footer font-small blue">
-    <div class="footer-copyright text-center py-3">Cocktails:
+    <div class="footer-copyright text-center py-3">RecipeForMe:
         <a href="{{ url_for('main.about') }}"> About </a>
     </div>
 
